# TopGear

./: .gitignore  AI_INSTRUCTIONS.md  CHANGELOG.md  DEVELOPING.md  README.md  app.js  index.html  styles.css
.github/workflows/: release.yml
docs/: MONEY-MODEL.md  TopGear-User-Manual.html
scripts/: build_user_manual.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
