[package]
name = "topgear"
version = "0.1.0"
description = "TopGear garage management"
authors = ["TopGear"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "topgear_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
